dataset1235/2025-2/2318198438/users/1225947802/executions/2445341515_3449543993.log
== RUN (2025-09-02 01:10:34)
-- CODE: 
from math import *
print(5*10*/2 tan(pi/10))

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
File "XXXX", line 2
    print(5*10*/2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
File "XXXX", line 2
    print(5*10*/2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
File "XXXX", line 2
    print(5*10*/2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
File "XXXX", line 2
    print(5*10*/2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
File "XXXX", line 2
    print(5*10*/2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
File "XXXX", line 2
    print(5*10*/2 tan(pi/10))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:11:03)
-- CODE: 
from math import *
print(5*10*/ 2 tan(pi/10))

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 01:19:42)
-- CODE: 
from math import *
num=int(input("digite o valor:"))
ok=(num / (2 *tan(pi/10)))
print(round(5*num*ok, 2))

# faça seu código aqui!
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
digite o valor:123.11
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
digite o valor:30.78
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
digite o valor:276.99
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
digite o valor:377.02
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
digite o valor:69.25
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
digite o valor:192.36
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:12:25)
-- CODE: 
from math import *
la=input("digite o valor:")
rint(5*la*/ 2 tan(pi/10))

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
File "XXXX", line 3
    rint(5*la*/ 2 tan(pi/10))
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
File "XXXX", line 3
    rint(5*la*/ 2 tan(pi/10))
              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
File "XXXX", line 3
    rint(5*la*/ 2 tan(pi/10))
              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
File "XXXX", line 3
    rint(5*la*/ 2 tan(pi/10))
              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
File "XXXX", line 3
    rint(5*la*/ 2 tan(pi/10))
              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
File "XXXX", line 3
    rint(5*la*/ 2 tan(pi/10))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:11:05)
-- CODE: 
from math import *
print(5*10*/ 2 tan(pi/10))

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
File "XXXX", line 2
    print(5*10*/ 2 tan(pi/10))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
